# pyweekend-rust

./: .gitignore  Cargo.toml  build.rs
src/: main.rs
